--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -22,7 +22,10 @@ jobs:
         run: |
           make env
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest
+      - name: Test non-integration tests with pytest
         run: |
           make get_texts
-          pytest -vvx tests/ 
+          pytest -vvx -m "not integration" tests/
+      - name: Test integration tests with pytest
+        run: |
+          pytest -vvx -m integration tests/ 
