--- a/.github/workflows/validations.yml
+++ b/.github/workflows/validations.yml
@@ -35,3 +35,34 @@ jobs:
       - name: Lint code
         run: |
           pylint src/data_prep.py
+
+build:
+
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8"]
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          make env
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Test non-integration tests with pytest
+        run: |
+          make get_texts
+          pytest -vvx -m "not integration" tests/
+      - name: Test integration tests with pytest
+        run: |
+          pytest -vvx -m integration tests/
+      - name: Test Python version
+        run: |
+          pytest -vvx tests/test_python_version.py
+      - name: Lint code
+        run: |
+          pylint src/data_prep.py
