--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths = tests
-pythonpath = src/pah4rw_DS5111su24_lab_01
+pythonpath = src
 
 markers =
     integration: tests that chain multiple functions together
